# sonia-behaviors

./: 2021-11-19-12-10-16.bag  README.md
.Trash-1000/files/: droppers_double_vision_task_sm.py  droppers_task_sm.py  onsenfou_sm.py
.Trash-1000/info/: droppers.xml.trashinfo  droppers_double_vision_task.xml.trashinfo  droppers_double_vision_task_sm.py.trashinfo  droppers_no_ai_task.xml.trashinfo  droppers_no_ai_task_sm.py.trashinfo  droppers_sm.py.trashinfo  onsenfou.xml.trashinfo  (+3 more)
behavior_exos/: CMakeLists.txt  package.xml  setup.py
behaviors/sonia_comp_behaviors/: CMakeLists.txt  package.xml  setup.py
behaviors/sonia_comp_behaviors/manifest/: bullshit_magic.xml  bullshit_magic_gate.xml  full_run_2023.xml  gate_full_2023.xml  gate_full_left_2023.xml  gate_full_right_2023.xml  redneck_2023.xml  redneck_ai_2023.xml  run_semi_finals_2023.xml  snores.xml  snores_poke.xml  snores_test.xml
behaviors/sonia_comp_behaviors/src/sonia_comp_behaviors/: bullshit_magic_gate_sm.py  bullshit_magic_sm.py  full_run_2023_sm.py  gate_full_2023_sm.py  gate_full_left_2023_sm.py  gate_full_right_2023_sm.py  redneck_2023_sm.py  redneck_ai_2023_sm.py  run_semi_finals_2023_sm.py  snores_poke_sm.py  snores_sm.py  snores_test_sm.py
sonia_com_states/: CMakeLists.txt
sonia_flexbe_behaviors/: CMakeLists.txt  setup.py
sonia_flexbe_states/: package.xml
sonia_hardware_states/: CMakeLists.txt  setup.py
sonia_mapping_states/: setup.py
sonia_navigation_states/: package.xml  setup.py
sonia_sonar_states/: CMakeLists.txt  package.xml  setup.py
sonia_vision_states/: package.xml  setup.py
(+667 files in other folders)
